--- a/custom_widgets/basevacuum/basevacuum.css
+++ b/custom_widgets/basevacuum/basevacuum.css
@@ -33,7 +33,7 @@
 }
 
 .room-select:before {
-  font-family: 'Material Design Icons';
+  font-family: "Material Design Icons";
   font-size: 1em;
   display: block;
   margin-bottom: 10px;
